2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkhtml.in:
	  Add a hack to gtkdoc-mkhtml to run uninstalled too.

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtk-doc.xsl:
	  Generate ONLINE tag in index.sgml.

	* gtkdoc-fixxref.in:
	  Allow to base links against online versions of xreffed docs.
	  Fixes #454916.
	  
	* gtkdoc-mkdb.in:
	  Add releaseinfo to doctemplates.

	* tests/bugs/docs/tester-docs.sgml:
	* tests/gobject/docs/tester-docs.sgml:
	  Update templates.

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	* tests/gtk-doc.make:
	  Use PERL5LIB envvar to use uninstalled gtkdoc-common.pl for tests.
	  Use tee to both show and redirect logs.
	  Build test-docs in check-local instead of all-local.
	  Fixes #459725.

2007-07-25  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-scan.in:
	  Some more debug prints and code cleaning.

2007-07-23  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtk-doc.make:
	* gtkdoc-mkdb.in:
	  Report undeclared symbols into a file. Fixes #436565.

2007-07-18  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Readd two debug prints and remove one obsolete one.

	* tests/bugs/Makefile.am:
	* tests/gobject/Makefile.am:
	  Enforce 'make clean' before 'make check'.

2007-07-18  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	  Cleanup broek-return handling and add ignore_broken_returns for
	  section docs. Fixes #457077

	* tests/bugs/docs/Makefile.in:
	* tests/gobject/docs/Makefile.in:
	  Remove.

	* tests/gtk-doc.make:
	  Use the local tools so that 'make check' works uninstalled.
	  

2007-07-18  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c: (bug_419997):
	* tests/bugs/src/tester.h:
	* tests/gobject/src/tester.c: (gtkdoc_tester_class_init):